# cleancode

./: .env  pyproject.toml
src/: main.py
src/auth/application/interfaces/: password_hasher.py
src/auth/application/ports/: jwt_service.py
src/auth/application/services/: auth_service.py  user_service.py
src/auth/application/use_cases/: delete_user.py  register_user.py  update_user.py
src/auth/application/usecase/: login_user.py  resister_user.py
src/auth/domain/: entities.py  exceptions.py  repository.py
src/auth/infrastructure/: database.py
src/auth/infrastructure/orm/: models.py
src/auth/infrastructure/repositories/: sqlalchemy_user_repo.py
src/auth/infrastructure/security/: bcrypt_hasher.py  jwt_handler.py
src/auth/interface/: auth_router.py  auth_schemas.py  dependencies.py  exception_handlers.py
