[project]
name = "cleancode"
version = "0.1.0"
description = "Clean code Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pymongo>=4.17.0",
    "passlib>=1.7.4",
    "PyJWT>=2.13.0",
    "tzlocal>=5.3.1",
    "SQLAlchemy>=2.0.5",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.19.0",
]

